--- a/config.json
+++ b/config.json
@@ -37,33 +37,33 @@
   },
   "rule_groups": [ //按顺序
     {
-      "name": "private", // "name" 必须，与脚本中"$repo_dir"/private的private对应，用以确定文件名。 "private" 可以是作为文件名时合法的字符串
+      "name": "private", // "name" 必须，与脚本中 "$repo_dir"/private 的 private 对应，用以确定文件名。 "private" 可以改为合法的文件名字符串，不应与其他规则组重复
       "description": "本地设备域名",
-      "dns_tag": "private", // "dns_tag" "dns_servers" 二选一或都没有，都没有时为 "default_servers" 。如果 "dns_tag" "dns_servers" 都配置了优先使用 "dns_servers" 并输出警告
+      "dns_tag": "private", // "dns_tag" "dns_servers" 二选一或都没有，都没有时为 "default_servers" 。如果 "dns_tag" "dns_servers" 都配置了优先使用 "dns_servers" 并发出警告
       "rules": [ //与 v2ray/xray/singbox 的路由规则中的domain数组类似
-        "domain:mir3g70", //由 "domain:" 或" full:" 开始，余下部分是一个域名。
+        "domain:mir3g70", //由 "domain:" 或 "full:" 开始，余下部分是一个域名。
         "domain:rm2100dd",
         "#geosite:private", //包含特殊符号，如 "#" 或 "!" 等，这是一条错误规则，会在实际实现中无法通过域名检查或无法加载到实际规则集而被忽略，发现时发出警告
-        "geosite:ErrorGeoSiteName", //这是一条错误的geosite规则集语法，实际实现中无法加载到实际规则集而被忽略，发现时发出警告
+        "geosite:ErrorGeoSiteName", //这是一条错误的 geosite 规则集语法，实际实现中无法加载到实际规则集而被忽略，发现时发出警告
         "localhost.lan", //合法域名
-        " localhost1.lan", //合法域名，会在实际实现中自动去除前面或后面的空格
+        " localhost1.lan", //合法域名，会在实际实现中自动去除前面和后面的空格
         "localhost2.lan:80", //带端口的合法域名，实际实现中需去除端口，发现时发出以info级别发出普通提醒，提示不应该带端口
         "localhost3.lan:70000", //带有非法端口的域名，会在实际实现中无法通过域名检查而被忽略，发现时发出警告
         "local host4.lan", //非法域名，会在实际实现中无法通过域名检查而被忽略，发现时发出警告
-        "例子.中国" //合法域名，将转换为Punycode
+        "例子.中国" //合法域名，在实际实现中将自动转换为Punycode
       ]
     },
     {
-      "name": "direct1", //name必须，与脚本中"$repo_dir"/direct1的direct1对应，用以确定文件名。 "direct1" 可以是作为文件名时合法的字符串
+      "name": "direct1", // "name" 必须，与脚本中 "$repo_dir"/direct1 的 direct1 对应，用以确定文件名。 "direct1" 可以改为合法的文件名字符串，不应与其他规则组重复
       "dns_tag": "direct",
       "rules": [
-        "domain:360.cn", //由 "domain:" 或" full:" 开始，余下部分是一个域名。
+        "domain:360.cn", //由 "domain:" 或 "full:" 开始，余下部分是一个域名。
         "domain:alidns.com",
         "domain:doh.pub",
         "domain:dot.pub",
         "domain:onedns.net",
-        "geosite:apple-cn", //规则集/预定义域名列表：由 "geosite:" 开头，余下部分是一个名称, 匹配"$geosite_dir"/目录下的对应文件如"$geosite_dir"/apple-cn
-        "geosite:google-cn" //预定义域名列表：由 "geosite:" 开头，余下部分是一个名称, 匹配"$geosite_dir"/目录下的对应文件如"$geosite_dir"/apple-cn
+        "geosite:apple-cn", //规则集/预定义域名列表：由 "geosite:" 开头，余下部分是一个名称, 匹配 "$geosite_dir"/ 目录下的对应文件，如 "$geosite_dir"/apple-cn
+        "geosite:google-cn" //预定义域名列表：由 "geosite:" 开头，余下部分是一个名称, 匹配 "$geosite_dir"/ 目录下的对应文件，如 "$geosite_dir"/google-cn
       ]
     },
     {
@@ -79,7 +79,7 @@
     },
     {
       "name": "direct2",
-      "dns_servers": [ // "dns_tag" "dns_servers" 二选一或都没有，都没有时为" default_servers" 。如果 "dns_tag" "dns_servers" 都配置了优先使用dns_servers并输出警告
+      "dns_servers": [ // "dns_tag" "dns_servers" 二选一或都没有，都没有时为 "default_servers" 。如果 "dns_tag" 和 "dns_servers" 都配置了优先使用 "dns_servers" 并输出警告
         "https://dns.alidns.com/dns-query",
         "https://doh.pub/dns-query",
         "https://doh.360.cn",
@@ -95,13 +95,13 @@
         "domain:kmzs123.top",
         "domain:ping0.cc",
         "domain:vmshell.com",
-        "geosite:category-games@cn", //geosite的特殊用法，不再是加载整个文件，只加载行尾存在与@cn类似的@标签的特定规则
-        "geosite:china-list",
-        "geosite:cn",
+        "geosite:category-games@cn", // geosite 的特殊用法，不再是加载整个文件，只加载行尾存在与 @cn 类似的 @标签 的特定规则
+        "geosite:china-list", // geosite 里的规则集也是由 "domain:" "full:" "regexp:" "regex:" 开头，或是域名（有时还会有端口）。
+        "geosite:cn",         //总的来说，与我们的规则语法一致，甚至会嵌套调用 geosite: 规则集
         "geosite:tld-cn",
-        "geosite:win-update",//xray对预定义域名列表的介绍：此列表预置于每一个 Xray 的安装包中，文件名为 geosite.dat。这个文件包含了一些常见的域名，使用方式：geosite:filename，如 geosite:google 表示对文件内符合 google 内包含的域名，进行路由筛选或 DNS 筛选。
-        "geosite:@cn", //本脚本添加的特殊geosite语法，表示加载"$geosite_dir"/目录下所有存在与@cn类似的@标签的规则
-        "geosite:*-cn" //实际实现上与普通geosite语法类似，只不过这是有通配符，加载使用 `awk 1 "$geosite_dir"/*-cn` 命令能读取的规则，不限定 "-cn" ，允许任何类似情况，如 geolocation* a*b 等这个命令能读取的规则
+        "geosite:win-update",// xray 对预定义域名列表的介绍：此列表预置于每一个 Xray 的安装包中，文件名为 geosite.dat 。这个文件包含了一些常见的域名，使用方式： geosite:filename ，如 geosite:google 表示对文件内符合 google 内包含的域名，进行路由筛选或 DNS 筛选。
+        "geosite:@cn", //本脚本添加的特殊 geosite 语法，表示加载 "$geosite_dir"/ 目录下所有存在与 @cn 类似的 @标签 的规则
+        "geosite:*-cn" //实际实现上与普通 geosite 语法类似，只不过这是有通配符，加载使用 `awk 1 "$geosite_dir"/*-cn` 命令能读取的规则，不限定 "-cn" ，允许任何类似情况，如 geolocation* a*b 等这个命令能读取的规则
       ]
     }
   ] //允许更多规则组
