添加示例配置

--- a/config.json
+++ b/config.json
@@ -1,124 +1,1 @@
-{ //json5
-  "dns_servers": {
-    "default_servers": { //必须，如果规则中没有设置默认使用这个
-      "description": "默认上游DNS", //描述，非必须，可以包含更多其他，实际读取时忽略
-      "servers": [ //必须，至少有一个，不建议太多，1-4个即可，太多会导致最后生成的文件过大
-        "tcp://192.168.15.20:11114",
-        "tcp://192.168.15.20:10014",
-        "tcp://[fd21:bda8:56ba:0:222:4dff:fea7:674d]:11116",
-        "tcp://[fd21:bda8:56ba:0:222:4dff:fea7:674d]:10016" //允许更多dns服务器
-      ]
-    },
-    "private": {
-      "description": "内网", //描述，非必须，可以包含更多其他，实际读取时忽略
-      "servers": [ //必须，至少有一个
-        "192.168.15.1",
-        "fd21:bda8:56ba::1"
-      ]
-    },
-    "direct": {
-      "description": "直连", //描述，非必须，可以包含更多其他，实际读取时忽略
-      "servers": [ //必须，至少有一个
-        "https://dns.alidns.com/dns-query",
-        "https://doh.pub/dns-query",
-        "https://doh.360.cn/dns-query",
-        "https://doh-pure.onedns.net/dns-query"
-      ]
-    },
-    "proxy": {
-      "description": "代理",
-      "servers": [
-        "tcp://192.168.15.20:11114",
-        "tcp://192.168.15.20:10014",
-        "tcp://[fd21:bda8:56ba:0:222:4dff:fea7:674d]:11116",
-        "tcp://[fd21:bda8:56ba:0:222:4dff:fea7:674d]:10016"
-      ]
-    },
-    "example": { //还可以有更多dns服务器组，在规则中使用 "dns_tag" 引用
-      "description": "AdGuardHome提供的dns服务器示例",
-      "servers": [
-        "94.140.14.140", "2a10:50c0::1:ff", //常规 DNS（通过 UDP）
-        "94.140.14.140:53", "[2a10:50c0::1:ff]:53", //常规 DNS（通过 UDP，带端口）
-        "udp://dns-unfiltered.adguard.com", //常规 DNS（通过 UDP，主机名）
-        "tcp://94.140.14.140", "tcp://[2a10:50c0::1:ff]", //常规 DNS（通过 TCP）
-        "tcp://94.140.14.140:53", "tcp://[2a10:50c0::1:ff]:53", //常规 DNS（通过 TCP，带端口）
-        "tcp://dns-unfiltered.adguard.com", //常规 DNS（通过 TCP、主机名）
-        "tls://dns-unfiltered.adguard.com", //加密的 DNS-over-TLS
-        "https://dns-unfiltered.adguard.com/dns-query", //加密的 DNS-over-HTTPS
-        "h3://dns-unfiltered.adguard.com/dns-query", //加密的 DNS-over-HTTPS，强制使用 HTTP/3，并且不回退到 HTTP/2 及以下版本
-        "quic://dns-unfiltered.adguard.com", //加密的 DNS-over-QUIC
-        "sdns://..." //DNSCrypt 或 DNS-over-HTTPS 解析器的 DNS 标记
-      ]
-    }
-  },
-  "rule_groups": [ //按顺序
-    {
-      "name": "private", // "name" 必须，与脚本中 "$repo_dir"/private 的 private 对应，用以确定文件名。 "private" 可以改为合法的文件名字符串，不应与其他规则组重复
-      "description": "本地设备域名",
-      "dns_tag": "private", // "dns_tag" "dns_servers" 二选一或都没有，都没有时为 "default_servers" 。如果 "dns_tag" "dns_servers" 都配置了优先使用 "dns_servers" 并发出警告
-      "rules": [ //与 v2ray/xray/singbox 的路由规则中的domain数组类似
-        "domain:mir3g70", //由 "domain:" 或 "full:" 开始，余下部分是一个域名。
-        "domain:rm2100dd",
-        "#geosite:private", //包含特殊符号，如 "#" 或 "!" 等，这是一条错误规则，会在实际实现中无法通过域名检查或无法加载到实际规则集而被忽略，发现时发出警告
-        "geosite:ErrorGeoSiteName", //这是一条错误的 geosite 规则集语法，实际实现中无法加载到实际规则集而被忽略，发现时发出警告
-        "localhost.lan", //合法域名
-        " localhost1.lan", //合法域名，会在实际实现中自动去除前面和后面的空格
-        "localhost2.lan:80", //带端口的合法域名，实际实现中需去除端口，发现时发出以info级别发出普通提醒，提示不应该带端口
-        "localhost3.lan:70000", //带有非法端口的域名，会在实际实现中无法通过域名检查而被忽略，发现时发出警告
-        "local host4.lan", //非法域名，会在实际实现中无法通过域名检查而被忽略，发现时发出警告
-        "例子.中国" //合法域名，在实际实现中将自动转换为Punycode
-      ]
-    },
-    {
-      "name": "direct1", // "name" 必须，与脚本中 "$repo_dir"/direct1 的 direct1 对应，用以确定文件名。 "direct1" 可以改为合法的文件名字符串，不应与其他规则组重复
-      "dns_tag": "direct",
-      "rules": [
-        "domain:360.cn", //由 "domain:" 或 "full:" 开始，余下部分是一个域名。
-        "domain:alidns.com",
-        "domain:doh.pub",
-        "domain:dot.pub",
-        "domain:onedns.net",
-        "geosite:apple-cn", //规则集/预定义域名列表：由 "geosite:" 开头，余下部分是一个名称, 匹配 "$geosite_dir"/ 目录下的对应文件，如 "$geosite_dir"/apple-cn
-        "geosite:google-cn" //预定义域名列表：由 "geosite:" 开头，余下部分是一个名称, 匹配 "$geosite_dir"/ 目录下的对应文件，如 "$geosite_dir"/google-cn
-      ]
-    },
-    {
-      "name": "proxy",
-      "dns_tag": "proxy",
-      "rules": [
-        "domain:1.ip.skk.moe",
-        "geosite:gfw",
-        "geosite:google",
-        "geosite:greatfire",
-        "regex:^r+[0-9]+(---|\\.)sn-(2x3|ni5|j5o)\\w{5}\\.googlevideo\\.com$" //正则表达式：由 "regexp:" 或 "regex:" 开始，余下部分是一个正则表达式。（注意，在 json 中，经常在正则表达式中使用的反斜杠会被用作转义，当正则表达式中的反斜杠 \ 应改为 \\）
-      ]
-    },
-    {
-      "name": "direct2",
-      "dns_servers": [ // "dns_tag" "dns_servers" 二选一或都没有，都没有时为 "default_servers" 。如果 "dns_tag" 和 "dns_servers" 都配置了优先使用 "dns_servers" 并输出警告
-        "https://dns.alidns.com/dns-query",
-        "https://doh.pub/dns-query",
-        "https://doh.360.cn/dns-query",
-        "https://doh-pure.onedns.net/dns-query"
-      ],
-      "rules": [
-        "domain:2.ip.skk.moe",
-        "domain:cytus.tk",
-        "domain:deepseek.com",
-        "domain:kmzs123.cf",
-        "domain:kmzs123.cn",
-        "domain:kmzs123.tk",
-        "domain:kmzs123.top",
-        "domain:ping0.cc",
-        "domain:vmshell.com",
-        "geosite:category-games@cn", // geosite 的特殊用法，不再是加载整个文件，只加载行尾存在与 @cn 类似的 @标签 的特定规则
-        "geosite:china-list", // geosite 里的规则集也是由 "domain:" "full:" "regexp:" "regex:" 开头，或是域名（有时还会有端口）。
-        "geosite:cn",         //总的来说，与我们的规则语法一致，甚至会嵌套调用 geosite: 规则集
-        "geosite:tld-cn",
-        "geosite:win-update",// xray 对预定义域名列表的介绍：此列表预置于每一个 Xray 的安装包中，文件名为 geosite.dat 。这个文件包含了一些常见的域名，使用方式： geosite:filename ，如 geosite:google 表示对文件内符合 google 内包含的域名，进行路由筛选或 DNS 筛选。
-        "geosite:@cn", //本脚本添加的特殊 geosite 语法，表示加载 "$geosite_dir"/ 目录下所有存在与 @cn 类似的 @标签 的规则
-        "geosite:*-cn" //实际实现上与普通 geosite 语法类似，只不过这是有通配符，加载使用 `awk 1 "$geosite_dir"/*-cn` 命令能读取的规则，不限定 "-cn" ，允许任何类似情况，如 geolocation* a*b 等这个命令能读取的规则
-      ]
-    }
-  ] //允许更多规则组
-}
+JSON5: invalid end of input at 1:1
